--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,8 @@ trim_trailing_whitespace = true
 
 [*.t]
 trim_trailing_whitespace = false
+trim_trailing_whitespace try= true 
+save ： safe two different files for both cases
 
 [Makefile]
 indent_style = tab
